[gd_scene load_steps=7 format=3 uid="uid://dodqhbm63d3ot"]

[ext_resource type="Texture2D" uid="uid://hnq7r65v0tk1" path="res://textures/playBackground.jpg" id="1_bovun"]
[ext_resource type="Script" path="res://scripts/menus/save_slot_select.gd" id="1_bvwvw"]
[ext_resource type="FontFile" uid="uid://ccf0qqfxgkxs5" path="res://PressStart2P-Regular.ttf" id="2_b8kik"]
[ext_resource type="Script" path="res://scripts/menus/save_slot_0_button.gd" id="4_0ekrd"]
[ext_resource type="Script" path="res://scripts/menus/save_slot_1_button.gd" id="5_rshje"]
[ext_resource type="Script" path="res://scripts/menus/save_slot_2_button.gd" id="6_kemx0"]

[node name="SaveSlotSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvwvw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bovun")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MenuName" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 23.0
offset_right = 184.0
offset_bottom = 46.0
scale = Vector2(3.3319, 2.72047)
theme_override_fonts/font = ExtResource("2_b8kik")
theme_override_font_sizes/font_size = 14
text = "SAVE_SLOTS_NAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 92.0
offset_right = 62.0
offset_bottom = 132.0
scale = Vector2(2.66816, 1.9876)

[node name="SaveSlot0" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveSlot0Button" type="Button" parent="VBoxContainer/SaveSlot0"]
layout_mode = 2
text = "UNUSED"
script = ExtResource("4_0ekrd")

[node name="SaveSlot1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveSlot1Button" type="Button" parent="VBoxContainer/SaveSlot1"]
layout_mode = 2
text = "UNUSED"
script = ExtResource("5_rshje")

[node name="SaveSlot2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveSlot2Button" type="Button" parent="VBoxContainer/SaveSlot2"]
layout_mode = 2
text = "UNUSED"
script = ExtResource("6_kemx0")

[connection signal="pressed" from="VBoxContainer/SaveSlot0/SaveSlot0Button" to="." method="_on_save_slot_0_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveSlot1/SaveSlot1Button" to="." method="_on_save_slot_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveSlot2/SaveSlot2Button" to="." method="_on_save_slot_2_button_pressed"]
